add: recover_password_route
