# src/routes/user.route.ts
@@ -13,6 +13,7 @@ userRouter.post(
   ensureDataIsValidMiddleware(userSchemaRequest),
   (req: Request, res: Response) => userController.create(req, res)
 );
+userRouter.get("/pdf/:id?", ensureAuthMiddleware, getDataFromToken, (req, res) => userController.generatePdf(req, res))
 userRouter.get("/:id?", ensureAuthMiddleware, getDataFromToken, (req, res) =>
   userController.list(req, res)
 );
@@ -31,4 +32,3 @@ userRouter.delete(
   ensureIsAccounttOwnerMiddleware,
   (req, res) => userController.remove(req, res)
 );
-userRouter.get("/pdf/:id?", ensureAuthMiddleware, getDataFromToken, ensureIsAccounttOwnerMiddleware, (req, res) => userController.generatePdf(req, res))
